--- a/TicTokProject.ipynb
+++ b/TicTokProject.ipynb
@@ -2,48 +2,262 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "344c6c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\" \"]*9\n",
+    "data1 = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "gameOver = 0\n",
+    "#print(type(gameOver))\n",
+    "\n",
+    "\n",
+    "def printTable(data):\n",
+    "    for i in range(11):\n",
+    "        if(i == 3 or i == 7):\n",
+    "            print(\"-----------------\")\n",
+    "        elif(i == 1):\n",
+    "            print(\"\", data[0], \"|\", data[1], \"|\", data[2], \"|\")\n",
+    "        elif(i == 5):\n",
+    "            print(\"\", data[3], \"|\", data[4], \"|\", data[5], \"|\")\n",
+    "        elif(i == 9):\n",
+    "            print(\"\", data[6], \"|\", data[7], \"|\", data[8], \"|\")\n",
+    "        else:\n",
+    "            print(\"   |   |   |\")\n",
+    "\n",
+    "def checkWinning(data):\n",
+    "    # Horizontal win conditions\n",
+    "    if (data[0] == 'X' and data[1] == 'X' and data[2] == 'X') or (data[0] == 'O' and data[1] == 'O' and data[2] == 'O'):\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @1\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @2\")\n",
+    "            return 1\n",
+    "    elif(data[3] == 'X' and data[4] == 'X' and data[5] == 'X') or (data[3] == 'O' and data[4] == 'O' and data[5] == 'O'):\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @3\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @4\")\n",
+    "            return 1\n",
+    "    elif (data[6] == 'X' and data[7] == 'X' and data[8] == 'X') or (data[6] == 'O' and data[7] == 'O' and data[8] == 'O')  :\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @5\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @6\")\n",
+    "            return 1\n",
+    "\n",
+    "# Vertical win conditions\n",
+    "    elif (data[0] == 'X' and data[3] == 'X' and data[6] == 'X') or (data[0] == 'O' and data[3] == 'O' and data[6] == 'O'):\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @7\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @8\")\n",
+    "            return 1\n",
+    "    elif (data[1] == 'X' and data[4] == 'X' and data[7] == 'X') or (data[1] == 'O' and data[4] == 'O' and data[7] == 'O') :\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @9\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @10\")\n",
+    "            return 1\n",
+    "    elif (data[2] == 'X' and data[5] == 'X' and data[8] == 'X') or (data[2] == 'O' and data[5] == 'O' and data[8] == 'O') :\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @11\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @12\")\n",
+    "            return 1\n",
+    "\n",
+    "# Diagonal win conditions\n",
+    "    elif (data[0] == 'X' and data[4] == 'X' and data[8] == 'X') or (data[0] == 'O' and data[4] == 'O' and data[8] == 'O'):\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @13\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @14\")\n",
+    "            return 1\n",
+    "    elif (data[2] == 'X' and data[4] == 'X' and data[6] == 'X') or (data[2] == 'O' and data[4] == 'O' and data[6] == 'O') :\n",
+    "        if(data[0]=='X'):\n",
+    "            print(user1+\" wins! @15\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            print(user2+\" wins. @16\")\n",
+    "            return 1\n",
+    "\n",
+    "    # If none of the win conditions are met\n",
+    "    else:\n",
+    "        return 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "13cb02e6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   |     |    |\n",
-      "1  | 2   | 3  |\n",
-      "   |     |    |\n",
+      "Enter the user 1 name. ajay\n",
+      "Enter the user 2 name. arjun\n",
+      "Below is the tic toc toe structure.\n",
+      "   |   |   |\n",
+      " 1 | 2 | 3 |\n",
+      "   |   |   |\n",
       "-----------------\n",
-      "   |     |    |\n",
-      "5  | 6   | 7  |\n",
-      "   |     |    |\n",
+      "   |   |   |\n",
+      " 4 | 5 | 6 |\n",
+      "   |   |   |\n",
       "-----------------\n",
-      "   |     |    |\n",
-      "9  | 10  | 11 |\n",
-      "   |     |    |\n"
+      "   |   |   |\n",
+      " 7 | 8 | 9 |\n",
+      "   |   |   |\n",
+      "ajay - Start the game by choosing a number . You will mark X at the blank place.1\n",
+      "\n",
+      "   |   |   |\n",
+      " X |   |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "****************************\n",
+      "arjun - Start the game by choosing a number . You will mark O at the blank place.2\n",
+      "   |   |   |\n",
+      " X | O |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "****************************\n",
+      "Below is the tic toc toe structure.\n",
+      "   |   |   |\n",
+      " 1 | 2 | 3 |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " 4 | 5 | 6 |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " 7 | 8 | 9 |\n",
+      "   |   |   |\n",
+      "ajay - Start the game by choosing a number . You will mark X at the blank place.4\n",
+      "\n",
+      "   |   |   |\n",
+      " X | O |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " X |   |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "****************************\n",
+      "arjun - Start the game by choosing a number . You will mark O at the blank place.5\n",
+      "   |   |   |\n",
+      " X | O |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " X | O |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "   |   |   |\n",
+      "****************************\n",
+      "Below is the tic toc toe structure.\n",
+      "   |   |   |\n",
+      " 1 | 2 | 3 |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " 4 | 5 | 6 |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " 7 | 8 | 9 |\n",
+      "   |   |   |\n",
+      "ajay - Start the game by choosing a number . You will mark X at the blank place.7\n",
+      "\n",
+      "   |   |   |\n",
+      " X | O |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " X | O |   |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " X |   |   |\n",
+      "   |   |   |\n",
+      "ajay wins! @7\n"
      ]
     }
    ],
    "source": [
-    "for i in range(11):\n",
-    "    if(i==3 or i==7):\n",
-    "        print(\"-----------------\")\n",
-    "    elif(i==1 or i==5):\n",
-    "        print(i,\" |\", i+1,\"  |\",i+2,\" |\")\n",
-    "    elif(i==9):\n",
-    "        print(i,\" |\",i+1,\" |\",i+2,\"|\")\n",
-    "    else:\n",
-    "        print(\"   |     |    |\")\n",
-    "    "
+    "user1 = 'ajay'\n",
+    "user2 = 'arjun'\n",
+    "user1=str(input(\"Enter the user 1 name. \"))\n",
+    "user2=str(input(\"Enter the user 2 name. \"))\n",
+    "\n",
+    "while(gameOver == 0):\n",
+    "   \n",
+    "    print(\"Below is the tic toc toe structure.\")\n",
+    "    printTable(data1)\n",
+    "    num = int(input(\n",
+    "        (user1+\" - Start the game by choosing a number . You will mark X at the blank place.\")))\n",
+    "\n",
+    "    data[num-1] = \"X\"\n",
+    "    print()\n",
+    "    printTable(data)\n",
+    "    checkpoint = int(checkWinning(data))\n",
+    "    if(checkpoint==1):\n",
+    "        break\n",
+    "    print(\"****************************\")\n",
+    "    num = int(input(\n",
+    "        (user2+ \" - Start the game by choosing a number . You will mark O at the blank place.\")))\n",
+    "    data[num-1] = \"O\"\n",
+    "    printTable(data)\n",
+    "    print(\"****************************\")\n",
+    "    checkpoint = int(checkWinning(data))\n",
+    "    if(checkpoint==1):\n",
+    "        break\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a7a477a",
+   "id": "4a72584b",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11b92649",
+   "metadata": {},
+   "source": [
+    "#### "
+   ]
   }
  ],
  "metadata": {
