--- a/TicTokProject.ipynb
+++ b/TicTokProject.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "344c6c8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [\" \"]*9\n",
-    "data1 = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "data = [\" \"]*9  # will have blank entries\n",
+    "data1 = [1, 2, 3, 4, 5, 6, 7, 8, 9]  # new table which will have sample table structure\n",
     "gameOver = 0\n",
     "#print(type(gameOver))\n",
     "\n",
@@ -30,63 +30,63 @@
     "    # Horizontal win conditions\n",
     "    if (data[0] == 'X' and data[1] == 'X' and data[2] == 'X') or (data[0] == 'O' and data[1] == 'O' and data[2] == 'O'):\n",
     "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @1\")\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @2\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "    elif(data[3] == 'X' and data[4] == 'X' and data[5] == 'X') or (data[3] == 'O' and data[4] == 'O' and data[5] == 'O'):\n",
-    "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @3\")\n",
+    "        if(data[3]=='X'):\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @4\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "    elif (data[6] == 'X' and data[7] == 'X' and data[8] == 'X') or (data[6] == 'O' and data[7] == 'O' and data[8] == 'O')  :\n",
-    "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @5\")\n",
+    "        if(data[6]=='X'):\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @6\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "\n",
     "# Vertical win conditions\n",
     "    elif (data[0] == 'X' and data[3] == 'X' and data[6] == 'X') or (data[0] == 'O' and data[3] == 'O' and data[6] == 'O'):\n",
     "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @7\")\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @8\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "    elif (data[1] == 'X' and data[4] == 'X' and data[7] == 'X') or (data[1] == 'O' and data[4] == 'O' and data[7] == 'O') :\n",
-    "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @9\")\n",
+    "        if(data[1]=='X'):\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @10\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "    elif (data[2] == 'X' and data[5] == 'X' and data[8] == 'X') or (data[2] == 'O' and data[5] == 'O' and data[8] == 'O') :\n",
-    "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @11\")\n",
+    "        if(data[2]=='X'):\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @12\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "\n",
     "# Diagonal win conditions\n",
     "    elif (data[0] == 'X' and data[4] == 'X' and data[8] == 'X') or (data[0] == 'O' and data[4] == 'O' and data[8] == 'O'):\n",
     "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @13\")\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @14\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "    elif (data[2] == 'X' and data[4] == 'X' and data[6] == 'X') or (data[2] == 'O' and data[4] == 'O' and data[6] == 'O') :\n",
-    "        if(data[0]=='X'):\n",
-    "            print(user1+\" wins! @15\")\n",
+    "        if(data[2]=='X'):\n",
+    "            print(user1+\" wins! \")\n",
     "            return 1\n",
     "        else:\n",
-    "            print(user2+\" wins. @16\")\n",
+    "            print(user2+\" wins. \")\n",
     "            return 1\n",
     "\n",
     "    # If none of the win conditions are met\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "13cb02e6",
    "metadata": {},
    "outputs": [
@@ -132,13 +132,13 @@
       "   |   |   |\n",
       "   |   |   |\n",
       "****************************\n",
-      "arjun - Start the game by choosing a number . You will mark O at the blank place.2\n",
+      "arjun - Start the game by choosing a number . You will mark O at the blank place.4\n",
       "   |   |   |\n",
-      " X | O |   |\n",
+      " X |   |   |\n",
       "   |   |   |\n",
       "-----------------\n",
       "   |   |   |\n",
-      "   |   |   |\n",
+      " O |   |   |\n",
       "   |   |   |\n",
       "-----------------\n",
       "   |   |   |\n",
@@ -157,31 +157,31 @@
       "   |   |   |\n",
       " 7 | 8 | 9 |\n",
       "   |   |   |\n",
-      "ajay - Start the game by choosing a number . You will mark X at the blank place.4\n",
+      "ajay - Start the game by choosing a number . You will mark X at the blank place.8\n",
       "\n",
-      "   |   |   |\n",
-      " X | O |   |\n",
-      "   |   |   |\n",
-      "-----------------\n",
       "   |   |   |\n",
       " X |   |   |\n",
       "   |   |   |\n",
       "-----------------\n",
       "   |   |   |\n",
+      " O |   |   |\n",
       "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      "   | X |   |\n",
       "   |   |   |\n",
       "****************************\n",
       "arjun - Start the game by choosing a number . You will mark O at the blank place.5\n",
       "   |   |   |\n",
-      " X | O |   |\n",
+      " X |   |   |\n",
       "   |   |   |\n",
       "-----------------\n",
       "   |   |   |\n",
-      " X | O |   |\n",
+      " O | O |   |\n",
       "   |   |   |\n",
       "-----------------\n",
       "   |   |   |\n",
-      "   |   |   |\n",
+      "   | X |   |\n",
       "   |   |   |\n",
       "****************************\n",
       "Below is the tic toc toe structure.\n",
@@ -199,17 +199,31 @@
       "ajay - Start the game by choosing a number . You will mark X at the blank place.7\n",
       "\n",
       "   |   |   |\n",
-      " X | O |   |\n",
+      " X |   |   |\n",
       "   |   |   |\n",
       "-----------------\n",
       "   |   |   |\n",
-      " X | O |   |\n",
+      " O | O |   |\n",
       "   |   |   |\n",
       "-----------------\n",
+      "   |   |   |\n",
+      " X | X |   |\n",
+      "   |   |   |\n",
+      "****************************\n",
+      "arjun - Start the game by choosing a number . You will mark O at the blank place.6\n",
       "   |   |   |\n",
       " X |   |   |\n",
       "   |   |   |\n",
-      "ajay wins! @7\n"
+      "-----------------\n",
+      "   |   |   |\n",
+      " O | O | O |\n",
+      "   |   |   |\n",
+      "-----------------\n",
+      "   |   |   |\n",
+      " X | X |   |\n",
+      "   |   |   |\n",
+      "****************************\n",
+      "arjun wins. \n"
      ]
     }
    ],
